# tree-sitter-weasel

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml  publish.yml
bindings/c/: tree-sitter-cpp.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_weasel/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterWeasel/: weasel.h
bindings/swift/TreeSitterWeaselTests/: TreeSitterWeaselTests.swift
queries/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  scanner.c
test/corpus/: ccx.txt
