[package]
name = "tree-sitter-weasel"
description = "Weasel grammar for tree-sitter"
version = "0.23.4"
authors = [
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Amaan Qureshi <amaanq12@gmail.com>",
  "Greger Olsson <greger.olsson@veriscan.se>",
]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "cpp", "weasel"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/weasel-lang/tree-sitter-weasel"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "LICENSE",
  "bindings/rust/*",
  "./grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"
tree-sitter = { version = "0.26", optional = true }

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.5"
